# ChangeLog for app-laptop/ibm-acpi
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-laptop/ibm-acpi/ChangeLog,v 1.7 2004/10/24 14:12:47 brix Exp $

  24 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> ibm-acpi-0.7.ebuild:
  Added dependency on virtual/linux-sources.

*ibm-acpi-0.7 (23 Oct 2004)

  23 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> +ibm-acpi-0.7.ebuild:
  Version bump.

*ibm-acpi-0.6 (20 Oct 2004)

  20 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> +ibm-acpi-0.6.ebuild:
  Version bump. Only install example configuration if USE="doc".

*ibm-acpi-0.5 (18 Oct 2004)

  18 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> +ibm-acpi-0.5.ebuild:
  Version bump.

  04 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> ibm-acpi-0.4.ebuild:
  Stable on x86

*ibm-acpi-0.4 (16 Sep 2004)

  16 Sep 2004; Henrik Brix Andersen <brix@gentoo.org> +ibm-acpi-0.4.ebuild:
  Version bump.

*ibm-acpi-0.3 (02 Sep 2004)

  02 Sep 2004; Henrik Brix Andersen <brix@gentoo.org> +metadata.xml,
  +ibm-acpi-0.3.ebuild:
  Initial import. Fixes bug #62243. Ebuild by me.
