@@ -1,12 +1,14 @@
+MD5 4bb56debe540912bd5080079560951fd ibm-acpi-0.8.ebuild 1887
 MD5 679ba888768ac666d30e59e820578041 ibm-acpi-0.3.ebuild 1765
 MD5 0e7ebbaa88994d1a54cf5135234a4fc2 ibm-acpi-0.5.ebuild 1759
 MD5 84c682c05121f755098d156eb62289ab ibm-acpi-0.7.ebuild 1871
 MD5 c92a4459b9ae22de3f30b55d6c3442ad ibm-acpi-0.4.ebuild 1802
-MD5 195ac26bb6147297edb2817ffce051d5 ChangeLog 1132
-MD5 dc1773fc29727c205a632b4a780a5d21 metadata.xml 219
+MD5 df1e862fb5dd66e67cff0178437f7a04 ChangeLog 1254
+MD5 b280eebc74d70d85e664debf1adce2c3 metadata.xml 255
 MD5 9bc420a87e148fb68b41f0469113d30e ibm-acpi-0.6.ebuild 1847
 MD5 d3d4d8542e2fcc77d860f0942089bb8c files/digest-ibm-acpi-0.3 63
 MD5 d1c1de52630fbc3ae75edad2fad6f90b files/digest-ibm-acpi-0.4 63
 MD5 f0037cea110a171b6db552445d7b26a6 files/digest-ibm-acpi-0.5 63
 MD5 8bdcc9667fa7b6b8d621293689703ef1 files/digest-ibm-acpi-0.6 63
 MD5 992884fd6007cecf9a450554881b13ed files/digest-ibm-acpi-0.7 63
+MD5 bed3ae2596959ff1e380bfba86458bc5 files/digest-ibm-acpi-0.8 63
