@@ -1,0 +1,1 @@
+MD5 8e5fa7d61a8e613513629133f9d7208c ibm-acpi-0.8.tar.gz 25979
