@@ -1,6 +1,11 @@
 # ChangeLog for app-laptop/ibm-acpi
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/ibm-acpi/ChangeLog,v 1.7 2004/10/24 14:12:47 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/ibm-acpi/ChangeLog,v 1.8 2004/11/12 06:49:31 brix Exp $
+
+*ibm-acpi-0.8 (12 Nov 2004)
+
+  12 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> +ibm-acpi-0.8.ebuild:
+  Version bump.
 
   24 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> ibm-acpi-0.7.ebuild:
   Added dependency on virtual/linux-sources.
